name:           anonymous-data-aeson
version:        0.1
synopsis:       FromJSON and ToJSON instances for anonymous data.
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/anonymous-data
bug-reports:    https://github.com/duairc/anonymous-data/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  include-dirs:
    include

  exposed-modules:
    Data.Anonymous.Aeson

  build-depends:
    aeson >= 0.4 && < 0.12,
    base >= 4.2 && < 5,
    anonymous-data >= 0.1 && < 0.2,
    text >= 0.1 && < 2,
    types >= 0.1 && < 0.2,
    unordered-containers >= 0.1 && < 0.3,
    vector >= 0.3 && < 0.13

  if impl(ghc >= 7.6)
    cpp-options: -DDataPolyKinds

  if impl(ghc >= 7.2)
    cpp-options: -DSafeHaskell

  if impl(ghc >= 7.10)
    cpp-options: -DOverlapPragma -DOverlappingInstances=NoImplicitParams -DIncoherentInstances=NoImplicitParams

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/anonymous-data.git
