name:           anonymous-data-hashable
version:        0.1
synopsis:       Hashable instances for anonymous-data
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/anonymous-data
bug-reports:    https://github.com/duairc/anonymous-data/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  exposed-modules:
    Data.Anonymous.Hashable

  build-depends:
    base >= 4.2 && < 5,
    anonymous-data >= 0.1 && < 0.2,
    hashable >= 1.2.5 && < 1.3,
    types >= 0.1 && < 0.2,
    types-hashable >= 0.1 && < 0.2

  if impl(ghc >= 7.6)
    cpp-options: -DDataPolyKinds

  if impl(ghc >= 7.2)
    cpp-options: -DSafeHaskell

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/anonymous-data.git
