name:           anonymous-data-lens
version:        0.1
synopsis:       Lenses and prisms for anonymous data.
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/anonymous-data
bug-reports:    https://github.com/duairc/anonymous-data/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  include-dirs:
    include

  exposed-modules:
    Data.Anonymous.Product.Lens
    Data.Anonymous.Sum.Lens
    Type.List.Fields

  build-depends:
    anonymous-data >= 0.1 && < 0.2,
    base >= 4.7 && < 5

  if impl(ghc < 7.10)
    build-depends: transformers > 0.2 && < 0.6

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/anonymous-data.git
