name:           anonymous-data
version:        0.1
synopsis:       Product and sum types for anonymous data.
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/anonymous-data
bug-reports:    https://github.com/duairc/anonymous-data/issues
description:
  Strongly typed anonymous data. 'Data.Anonymous.Product.Product' can
  represent n-ary tuples, anonymous records and heterogenous lists;
  'Data.Anonymous.Sum.Sum' can represent n-ary unions and anonymous enums.

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  include-dirs:
    include

  exposed-modules:
    Data.Anonymous.Product
    Data.Field

  other-modules:
    Data.Classes

  build-depends:
    base >= 4 && < 5,
    deepseq >= 1.1 && < 1.5,
    types >= 0.1 && < 0.2

  if impl(ghc < 7.8)
    build-depends: transformers >= 0.2 && < 0.6

  if impl(ghc >= 7.8 && < 8)
    build-depends: transformers >= 0.5 && < 0.6

  if impl(ghc < 7)
    cpp-options: -DINLINABLE=INLINE

  if impl(ghc >= 7.6)
    cpp-options: -DDataPolyKinds

  if impl(ghc >= 7.8)
    cpp-options: -DUseAmbiguousTypes

  if impl(ghc >= 7.8)
    cpp-options: -DUseTypeLits

  if impl(ghc >= 7.8)
    cpp-options: -DClosedTypeFamilies
    exposed-modules:
      Type.List.Fields

  if impl(ghc >= 7.10)
    cpp-options: -DLanguagePatternSynonyms

  if impl(ghc >= 7.8)
    cpp-options: -DMinimalPragma

  if impl(ghc >= 7.2)
    cpp-options: -DSafeHaskell

  if impl(ghc >= 7.2)
    cpp-options: -DEqualitySuperclassConstraints

  if impl(ghc >= 7.2)
    cpp-options: -DGenericDeriving
    if impl(ghc < 7.6)
      build-depends: ghc-prim == 0.2.0.0

  if impl(ghc >= 7.10)
    cpp-options: -DOverlapPragma -DOverlappingInstances=NoImplicitParams -DIncoherentInstances=NoImplicitParams

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/anonymous-data.git
