name:           anonymous-types-lens
version:        0.1
synopsis:       Lenses and prisms for anonymous product and sum types.
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/anonymous-types
bug-reports:    https://github.com/duairc/anonymous-types/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  include-dirs:
    include

  exposed-modules:
    Data.Anonymous.Product.Lens
    Data.Anonymous.Sum.Lens
    Type.List.Fields

  build-depends:
    anonymous-types >= 0.1 && < 0.2,
    base >= 4.7 && < 5,
    profunctors

  if impl(ghc < 7.10)
    build-depends: transformers > 0.2 && < 0.6

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/anonymous-types.git
