name:           anonymous-types-product-profunctors
version:        0.1
synopsis:       ProductProfunctor and SumProfunctor instances for anonymous-types
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/anonymous-types
bug-reports:    https://github.com/duairc/anonymous-types/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  exposed-modules:
    Data.Anonymous.Profunctor

  build-depends:
    base >= 4.2 && < 5,
    anonymous-types >= 0.1 && < 0.2,
    product-profunctors >= 0.5 && < 0.8,
    profunctors >= 3.1.1 && < 6,
    types >= 0.1 && < 0.2

  if impl(ghc < 7.10)
    build-depends: transformers > 0.2 && < 0.6

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/anonymous-types.git
