name:           anonymous-types
version:        0.1
synopsis:       Anonymous product and sum types.
description:    Type-safe n-ary tuples, anonynmous records and heterogenous lists; type-safe n-ary unions and anonymous enums.
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/anonymous-types
bug-reports:    https://github.com/duairc/anonymous-types/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  include-dirs:
    include

  exposed-modules:
    Data.Anonymous.Product
    Data.Anonymous.Product.Lens
    Type.Constraint.All
    Type.List.Fields

  build-depends:
    base >= 4.7 && < 5,
    has-lens,
    types

  if impl(ghc < 7.10)
    build-depends: transformers > 0.2 && < 0.6

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/anonymous-types.git
