name:           anonymous-types
version:        0.1
synopsis:       Anonymous product and sum types.
description:    Type-safe n-ary tuples, anonynmous records and heterogenous lists; type-safe n-ary unions and anonymous enums.
license:        MPL-2.0
license-file:   LICENSE
author:         Shane O'Brien
maintainer:     shane@duairc.com
stability:      Experimental
category:       Type
cabal-version:  >= 1.6
build-type:     Simple
homepage:       https://github.com/duairc/anonymous-types
bug-reports:    https://github.com/duairc/anonymous-types/issues

extra-source-files:
  LICENSE

library
  hs-source-dirs:
    src

  include-dirs:
    include

  exposed-modules:
    Data.Anonymous.Product
    Data.Field
    Data.Uncurry

  build-depends:
    base >= 4 && < 5,
    types >= 0.1 && < 0.2

  if impl(ghc < 7.10)
    build-depends: transformers > 0.2 && < 0.6

  if impl(ghc >= 7.6)
    cpp-options: -DDataPolyKinds

  if impl(ghc >= 7.8)
    cpp-options: -DUseTypeLits

  if impl(ghc >= 7.8)
    cpp-options: -DClosedTypeFamilies

  if impl(ghc >= 7.2)
    cpp-options: -DSafeHaskell

  if impl(ghc >= 7.2)
    cpp-options: -DEqualitySuperclassConstraints

  if impl(ghc >= 7.2)
    cpp-options: -DGenericDeriving
    if impl(ghc < 7.6)
      build-depends: ghc-prim == 0.2.0.0

  if impl(ghc >= 7.10)
    cpp-options: -DOverlapPragma -DOverlappingInstances=NoImplicitParams -DIncoherentInstances=NoImplicitParams

  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/duairc/anonymous-types.git
